style.css
body {
  margin: 0;
  font-family: sans-serif;
}

#file-input {
  display: none;
}

#file-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 30vh;
  background-color: rgb(28, 119, 255);
  color: white;
  text-align: center;
  cursor: pointer;
}

#file-area h2,
#file-area p {
  margin: 5px;
}

#side-panel {
  position: absolute;
  top: 0;
  right: 0;
  width: 20em;
  height: 30vh;
  padding: 2em;
  box-sizing: border-box;
  pointer-events: none;
}

#side-panel button {
  font-size: 1rem;
  width: 100%;
  padding: 10px 20px;
  border: 0;
  border-radius: 10px;
  background-color: white;
  color: rgb(28, 119, 255);
  font-weight: bold;
  cursor: pointer;
  box-shadow: 0 5px 0 0 rgba(169, 169, 169, 0.4);
  pointer-events: all;
}
#side-panel button:active {
  transform: translateY(5px);
  box-shadow: 0 0 0 0;
}

#format-containers {
  display: flex;
}

.format-container {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  width: 50vw;
  min-height: 70vh;
  padding: 0.8em 7em;
}
.format-container h2 {
  text-align: center;
  margin-bottom: 20px;
}

#from-container {
  background-color: lightgray;
}
#to-container {
  background-color: rgb(184, 184, 184);
}

.search {
  text-align: center;
  margin-bottom: 30px;
  padding: 10px 20px;
  border: 0;
  border-radius: 5px;
  outline: none;
  box-shadow: 0 5px 0 0 darkgrey;
}

.format-list {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  align-items: center;
  background-color: white;
  border-radius: 10px;
  padding: 30px;
  margin-bottom: 5vw;
}

.format-list button {
  width: 80%;
  margin: 5px 0;
  padding: 10px;
  background-color: lightgray;
  border: 0;
  border-radius: 10px;
  font-family: monospace;
  cursor: pointer;
}

button.selected {
  background-color: rgb(28, 119, 255);
  color: white;
  font-weight: bold;
}

#convert-button {
  position: fixed;
  left: 50%;
  bottom: 5%;
  transform: translateX(-50%);
  font-size: 1.5rem;
  padding: 10px 20px;
  border: 0;
  border-radius: 10px;
  background-color: rgb(28, 119, 255);
  color: white;
  cursor: pointer;
}

.disabled {
  filter: grayscale(1);
  pointer-events: none;
}

#popup-bg {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}
#popup {
  position: fixed;
  left: 50%;
  top: 50%;
  width: 20vw;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 15px;
  border-radius: 10px;
  text-align: center;
}

@media only screen and (max-width: 800px) {
  #drop-hint-text {
    display: none;
  }
  .format-container {
    width: 100%;
    box-sizing: border-box;
  }
  #format-containers {
    flex-flow: column nowrap;
  }
  #popup {
    width: 80vw;
  }
  #side-panel {
    width: 50%;
    padding: 0.8em;
    text-align: right;
  }
  #side-panel button {
    font-size: 0.8rem;
    padding: 10px;
  }
}

